<resources>
    <string name="app_name">EasyVr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="gallery_fragment_label">Gallery</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_tour">create tour</string>
    <string name="your_tours_0">Your Tours(0)</string>
    <string name="tour_gallery">tour gallery</string>
    <string name="santo_rino">Santo Rino</string>
    <string name="highlight_tour">highlight tour</string>
    <string name="cape_de_varde">Cape De Varde</string>
    <string name="be_in_a_digital_experience">Be in a Digital Experience should be a free</string>
    <string name="food">Food</string>
    <string name="property">Property</string>
    <string name="inspiration">Inspiration</string>
    <string name="places">Places</string>
    <string name="vr_placeholder_text">Virtual Reality (VR) is getting more popular, redefinig the way we experience the what we see. We are offering the best food in Hong Kong</string>
    <string name="add_description">Add description</string>
    <string name="title">Title</string>
    <string name="choose_location">Choose Location</string>
    <string name="description">Description</string>
    <string name="choose_cover">Choose Cover</string>
    <string name="uploads">Uploads</string>
    <string name="cover_image">Cover Image</string>
    <string name="choose_file">Choose File</string>
    <string name="edit">Edit</string>
    <string name="publish">Publish</string>
    <string name="balcony">Balcony</string>
    <string name="hall">Hall</string>
    <string name="your_tour_has_been_published">Thank you! your tour has been published. <br /> Click here to experience</string>
    <string name="embed_on_website">Embed on website</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_adjustment">Color Adjustment</string>
    <string name="crop">crop</string>
    <string name="blur_brush">Blur Brush</string>
    <string name="special_filter">Special Filter</string>
    <string name="background">Background</string>
    <string name="color">Color</string>
    <string name="noise">Noise</string>
    <string name="sharpen">Sharpen</string>
    <string name="gamma">Gamma</string>
    <string name="website">Website</string>
    <string name="e_g_mary_abc_limited">(E.g. Mary ABC, Limited</string>
    <string name="www_website_com">www.website.com</string>
    <string name="upload_360_content">Upload 360 content</string>
    <string name="file_must_be_less_than_10mb">File must be less than 10mb.</string>
    <string name="allowed_file_type_jpg_jpeg_png_mp4">Allowed file type jpg, jpeg, png, mp4</string>
    <string name="each_can_take_maximum_of_20_files">Each can take maximum of 20 files</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!--    <string name="your_tour_has_been_published"><![CDATA[Thank you! your tour has been published. <br /> Click here to experience]]></string>-->
</resources>
