<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_horizontal_margin">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_description"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_description_textView" />

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle2"
        android:gravity="top"
        android:inputType="textCapWords"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/title_textView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_edit" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle2"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_textView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_cover_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_cover"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit" />

    <View
        android:id="@+id/choose_cover_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/line_spacing"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_cover_textView"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_location_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_location"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_cover_view" />

    <View
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/line_spacing"
        android:background="@drawable/rectangle2"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_location_textView">

        <fragment
            android:id="@+id/my_rides_detail_mapview"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </View>
</androidx.constraintlayout.widget.ConstraintLayout>