<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TourGallery">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="@dimen/layout_horizontal_margin"
            android:src="@drawable/woman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_image"
            android:src="@drawable/ic_view_list_black_24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/user_image"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/digital_experience_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_spacing"
            android:layout_marginEnd="50dp"
            android:text="@string/be_in_a_digital_experience"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/food_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_spacing"
                android:textColor="@color/colorPrimary"
                android:singleLine="true"
                android:text="@string/food"
                android:textSize="@dimen/heading_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/user_image"
                app:layout_constraintTop_toBottomOf="@id/digital_experience_textView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/property_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/property"
                android:textSize="@dimen/heading_text_size"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@id/food_textView"
                app:layout_constraintTop_toTopOf="@id/food_textView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/inspiration_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/inspiration"
                android:textSize="@dimen/heading_text_size"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/property_textView"
                app:layout_constraintTop_toTopOf="@id/property_textView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/places_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/places"
                android:textSize="@dimen/heading_text_size"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@id/inspiration_textView"
                app:layout_constraintTop_toTopOf="@id/inspiration_textView"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tune_imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_tune_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/places_textView"
            app:layout_constraintBottom_toBottomOf="@id/places_textView"/>
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/food_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            tools:itemCount="10"
            tools:listitem="@layout/item_tour_gallery" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>